--- a/.github/workflows/focal.yml
+++ b/.github/workflows/focal.yml
@@ -29,4 +29,5 @@ jobs:
     - uses: actions/download-artifact@v3
       with:
         name: swiftlint
+    - run: chmod +x ./swiftlint
     - run: ./swiftlint
