--- a/.github/workflows/focal.yml
+++ b/.github/workflows/focal.yml
@@ -31,3 +31,31 @@ jobs:
         name: swiftlint
     - run: chmod +x ./swiftlint
     - run: ./swiftlint
+  focal-build-swiftlint-static:
+    runs-on: macos-latest
+    steps:
+    - uses: actions/checkout@v3
+    - name: build swiftlint
+      run: ./ci/build-swiftlint-static.sh focal
+    - uses: actions/upload-artifact@v2
+      with:
+        name: swiftlint
+        path: swiftlint
+    - uses: actions/upload-artifact@v2
+      with:
+        name: lib
+        path: ./toolchain-focal-x86_64-5.6.2/swift-5.6.2-RELEASE-ubuntu20.04/usr/lib/swift_static/linux/lib_InternalSwiftSyntaxParser.so
+  focal-run-swiftlint-static:
+    needs: focal-build-swiftlint-static
+    runs-on: ubuntu-20.04
+    steps:
+    - uses: actions/checkout@v3
+    - uses: actions/download-artifact@v3
+      with:
+        name: swiftlint
+    - uses: actions/download-artifact@v3
+      with:
+        name: lib
+        path: /usr/lib/swift/linux
+    - run: chmod +x ./swiftlint
+    - run: ./swiftlint
