--- a/.github/workflows/bionic.yml
+++ b/.github/workflows/bionic.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: build swiftlint
-      run: ./ci/build-swiftlint.sh bionic
+      run: ./ci/build-swiftlint.sh bionic x86_64
     - uses: actions/upload-artifact@v2
       with:
         name: swiftlint
@@ -29,5 +29,33 @@ jobs:
     - uses: actions/download-artifact@v3
       with:
         name: swiftlint
+    - run: chmod +x ./swiftlint
+    - run: ./swiftlint
+  bionic-build-swiftlint-static:
+    runs-on: macos-latest
+    steps:
+    - uses: actions/checkout@v3
+    - name: build swiftlint
+      run: ./ci/build-swiftlint-static.sh bionic x86_64
+    - uses: actions/upload-artifact@v2
+      with:
+        name: swiftlint
+        path: swiftlint
+    - uses: actions/upload-artifact@v2
+      with:
+        name: lib
+        path: ./toolchain-bionic-x86_64-5.6.2/swift-5.6.2-RELEASE-ubuntu20.04/usr/lib/swift_static/linux/lib_InternalSwiftSyntaxParser.so
+  bionic-run-swiftlint-static:
+    needs: bionic-build-swiftlint-static
+    runs-on: ubuntu-18.04
+    steps:
+    - uses: actions/checkout@v3
+    - uses: actions/download-artifact@v3
+      with:
+        name: swiftlint
+    - uses: actions/download-artifact@v3
+      with:
+        name: lib
+        path: /usr/lib/swift/linux
     - run: chmod +x ./swiftlint
     - run: ./swiftlint
