--- a/.github/workflows/focal.yml
+++ b/.github/workflows/focal.yml
@@ -22,7 +22,7 @@ jobs:
       run: ./ci/build-swiftlint.sh focal x86_64
     - uses: actions/upload-artifact@v2
       with:
-        name: swiftlint
+        name: swiftlint-focal
         path: swiftlint
   focal-run-swiftlint:
     needs: focal-build-swiftlint
@@ -32,7 +32,7 @@ jobs:
     - uses: actions/checkout@v3
     - uses: actions/download-artifact@v3
       with:
-        name: swiftlint
+        name: swiftlint-focal
     - run: chmod +x ./swiftlint
     - run: ./swiftlint
   focal-build-swiftlint-static:
@@ -43,7 +43,7 @@ jobs:
       run: ./ci/build-swiftlint-static.sh focal x86_64
     - uses: actions/upload-artifact@v2
       with:
-        name: swiftlint
+        name: swiftlint-focal-static
         path: swiftlint
     - uses: actions/upload-artifact@v2
       with:
@@ -60,7 +60,7 @@ jobs:
     - uses: actions/checkout@v3
     - uses: actions/download-artifact@v3
       with:
-        name: swiftlint
+        name: swiftlint-focal-static
     - uses: actions/download-artifact@v3
       with:
         name: lib_InternalSwiftSyntaxParser
