--- a/.github/workflows/bionic.yml
+++ b/.github/workflows/bionic.yml
@@ -47,19 +47,19 @@ jobs:
         path: swiftlint
     - uses: actions/upload-artifact@v2
       with:
-        name: lib_InternalSwiftSyntaxParser
+        name: lib_InternalSwiftSyntaxParser-bionic
         path: ./toolchain-bionic-x86_64-5.6.2/swift-5.6.2-RELEASE-ubuntu18.04/usr/lib/swift_static/linux/lib_InternalSwiftSyntaxParser.so
     - uses: actions/upload-artifact@v2
       with:
-        name: libBlocksRuntime
+        name: libBlocksRuntime-bionic
         path: ./toolchain-bionic-x86_64-5.6.2/swift-5.6.2-RELEASE-ubuntu18.04/usr/lib/swift/linux/libBlocksRuntime.so
     - uses: actions/upload-artifact@v2
       with:
-        name: libdispatch
+        name: libdispatch-bionic
         path: ./toolchain-bionic-x86_64-5.6.2/swift-5.6.2-RELEASE-ubuntu18.04/usr/lib/swift/linux/libdispatch.so
     - uses: actions/upload-artifact@v2
       with:
-        name: libsourcekitdInProc
+        name: libsourcekitdInProc-bionic
         path: ./toolchain-bionic-x86_64-5.6.2/swift-5.6.2-RELEASE-ubuntu18.04/usr/lib/libsourcekitdInProc.so
   bionic-run-swiftlint-static:
     needs: bionic-build-swiftlint-static
@@ -71,19 +71,19 @@ jobs:
         name: swiftlint-bionic-static
     - uses: actions/download-artifact@v3
       with:
-        name: lib_InternalSwiftSyntaxParser
+        name: lib_InternalSwiftSyntaxParser-bionic
         path: /tmp
     - uses: actions/download-artifact@v3
       with:
-        name: libdispatch
+        name: libdispatch-bionic
         path: /tmp
     - uses: actions/download-artifact@v3
       with:
-        name: libBlocksRuntime
+        name: libBlocksRuntime-bionic
         path: /tmp
     - uses: actions/download-artifact@v3
       with:
-        name: libsourcekitdInProc
+        name: libsourcekitdInProc-bionic
         path: /tmp
     - run: chmod +x ./swiftlint
     - run: LD_LIBRARY_PATH=/tmp ./swiftlint
