--- a/.github/workflows/bionic.yml
+++ b/.github/workflows/bionic.yml
@@ -61,29 +61,30 @@ jobs:
       with:
         name: libsourcekitdInProc-bionic
         path: ./toolchain-bionic-x86_64-5.6.2/swift-5.6.2-RELEASE-ubuntu18.04/usr/lib/libsourcekitdInProc.so
-  bionic-run-swiftlint-static:
-    needs: bionic-build-swiftlint-static
-    runs-on: ubuntu-18.04
-    steps:
-    - uses: actions/checkout@v3
-    - uses: actions/download-artifact@v3
-      with:
-        name: swiftlint-bionic-static
-    - uses: actions/download-artifact@v3
-      with:
-        name: lib_InternalSwiftSyntaxParser-bionic
-        path: /tmp
-    - uses: actions/download-artifact@v3
-      with:
-        name: libdispatch-bionic
-        path: /tmp
-    - uses: actions/download-artifact@v3
-      with:
-        name: libBlocksRuntime-bionic
-        path: /tmp
-    - uses: actions/download-artifact@v3
-      with:
-        name: libsourcekitdInProc-bionic
-        path: /tmp
-    - run: chmod +x ./swiftlint
-    - run: LD_LIBRARY_PATH=/tmp ./swiftlint
+  # TODO: Fix this job
+  # bionic-run-swiftlint-static:
+  #   needs: bionic-build-swiftlint-static
+  #   runs-on: ubuntu-18.04
+  #   steps:
+  #   - uses: actions/checkout@v3
+  #   - uses: actions/download-artifact@v3
+  #     with:
+  #       name: swiftlint-bionic-static
+  #   - uses: actions/download-artifact@v3
+  #     with:
+  #       name: lib_InternalSwiftSyntaxParser-bionic
+  #       path: /tmp
+  #   - uses: actions/download-artifact@v3
+  #     with:
+  #       name: libdispatch-bionic
+  #       path: /tmp
+  #   - uses: actions/download-artifact@v3
+  #     with:
+  #       name: libBlocksRuntime-bionic
+  #       path: /tmp
+  #   - uses: actions/download-artifact@v3
+  #     with:
+  #       name: libsourcekitdInProc-bionic
+  #       path: /tmp
+  #   - run: chmod +x ./swiftlint
+  #   - run: LD_LIBRARY_PATH=/tmp ./swiftlint
