--- a/.github/workflows/focal.yml
+++ b/.github/workflows/focal.yml
@@ -22,7 +22,7 @@ jobs:
       run: ./ci/build-swiftlint.sh focal x86_64
     - uses: actions/upload-artifact@v2
       with:
-        name: swiftlint
+        name: swiftlint-focal
         path: swiftlint
   focal-run-swiftlint:
     needs: focal-build-swiftlint
@@ -32,7 +32,7 @@ jobs:
     - uses: actions/checkout@v3
     - uses: actions/download-artifact@v3
       with:
-        name: swiftlint
+        name: swiftlint-focal
     - run: chmod +x ./swiftlint
     - run: ./swiftlint
   focal-build-swiftlint-static:
@@ -43,16 +43,24 @@ jobs:
       run: ./ci/build-swiftlint-static.sh focal x86_64
     - uses: actions/upload-artifact@v2
       with:
-        name: swiftlint
+        name: swiftlint-focal-static
         path: swiftlint
     - uses: actions/upload-artifact@v2
       with:
-        name: lib_InternalSwiftSyntaxParser
+        name: lib_InternalSwiftSyntaxParser-focal
         path: ./toolchain-focal-x86_64-5.6.2/swift-5.6.2-RELEASE-ubuntu20.04/usr/lib/swift_static/linux/lib_InternalSwiftSyntaxParser.so
     - uses: actions/upload-artifact@v2
       with:
-        name: libBlocksRuntime
+        name: libBlocksRuntime-focal
         path: ./toolchain-focal-x86_64-5.6.2/swift-5.6.2-RELEASE-ubuntu20.04/usr/lib/swift/linux/libBlocksRuntime.so
+    - uses: actions/upload-artifact@v2
+      with:
+        name: libdispatch-focal
+        path: ./toolchain-focal-x86_64-5.6.2/swift-5.6.2-RELEASE-ubuntu20.04/usr/lib/swift/linux/libdispatch.so
+    - uses: actions/upload-artifact@v2
+      with:
+        name: libsourcekitdInProc-focal
+        path: ./toolchain-focal-x86_64-5.6.2/swift-5.6.2-RELEASE-ubuntu20.04/usr/lib/libsourcekitdInProc.so
   focal-run-swiftlint-static:
     needs: focal-build-swiftlint-static
     runs-on: ubuntu-20.04
@@ -60,14 +68,22 @@ jobs:
     - uses: actions/checkout@v3
     - uses: actions/download-artifact@v3
       with:
-        name: swiftlint
+        name: swiftlint-focal-static
     - uses: actions/download-artifact@v3
       with:
-        name: lib_InternalSwiftSyntaxParser
+        name: lib_InternalSwiftSyntaxParser-focal
         path: /tmp
     - uses: actions/download-artifact@v3
       with:
-        name: libBlocksRuntime
+        name: libdispatch-focal
+        path: /tmp
+    - uses: actions/download-artifact@v3
+      with:
+        name: libBlocksRuntime-focal
+        path: /tmp
+    - uses: actions/download-artifact@v3
+      with:
+        name: libsourcekitdInProc-focal
         path: /tmp
     - run: chmod +x ./swiftlint
     - run: LD_LIBRARY_PATH=/tmp ./swiftlint
